--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>8 Ball</title>
 </head>
 <body>
+    <h1>What do you want to know?</h1>
 
     <script src="Script.js" charset="utf-8"></script>
 </body>
