--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
-    <title>8 Ball</title>
+    <title>Magic 8 Ball</title>
 </head>
 <body>
     <h1>What do you want to know?</h1>
