--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Magic 8 Ball</title>
 </head>
 <body>
-    <h1>What do you want to know?</h1>
+    <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
 
     <script src="Script.js" charset="utf-8"></script>
 </body>
