--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
-
+    <div id="Magic-8-ball">
+        <div>
+        
+        </div>
+    </div>
     <script src="Script.js" charset="utf-8"></script>
 </body>
 </html>
