--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
     <div id="Magic-8-ball">
         <div>
-            <h1 id="Answer">8</h1>
+            <button id="Answer">8</button>
         </div>
     </div>
     <script src="Script.js" charset="utf-8"></script>
