--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
     <div id="Magic-8-ball">
-        <div id="Magic-8-ball-border">
+        <div>
             <button id="Answer">8</button>
         </div>
     </div>
