--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1 id="Answer">8</h1>
         </div>
     </div>
+    <input class="input-style" type="text">
     <script src="Script.js" charset="utf-8"></script>
 </body>
 </html>
