--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
     </div>
     <input class="input-style" type="text">
+    <button id="Enter">Enter</button>
     <script src="Script.js" charset="utf-8"></script>
 </body>
 </html>
