--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 id="Answer">8</h1>
         </div>
     </div>
-    <input class="input-style" type="text">
+    <input id="input-style" type="text">
     <button id="Enter">Enter</button>
     <script src="Script.js" charset="utf-8"></script>
 </body>
