Add a div to input and button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <h1 id="Answer">8</h1>
         </div>
     </div>
-    <input id="input-style" type="text">
-    <button id="Enter">Enter</button>
+    <div>
+        <input id="input-style" type="text">
+        <button id="Enter">Enter</button>
+    </div>
     <script src="Script.js" charset="utf-8"></script>
 </body>
 </html>
