--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 id="Answer">8</h1>
         </div>
     </div>
-    <div>
+    <div id="box-input-button">
         <input id="input-style" type="text">
         <button id="Enter">Enter</button>
     </div>
