change id to uppercase

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1 id="Answer">8</h1>
         </div>
     </div>
-    <div id="box-input-button">
-        <input id="input-style" type="text">
+    <div id="Box-input-button">
+        <input id="Input-style" type="text">
         <button id="Enter">Enter</button>
     </div>
     <script src="Script.js" charset="utf-8"></script>
