--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div id="Box-input-button">
-        <input id="Input-style" type="text">
+        <input id="Input-style" type="text" placeholder="Ask Me Anything!">
         <button id="Enter">Enter</button>
     </div>
     <script src="Script.js" charset="utf-8"></script>
