Add div to h1 Answer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
     <div id="Magic-8-ball">
         <div id="Magic-8-ball-border">
-            <h1 id="Answer">8</h1>
+            <div id="Answer"><h1>8</h1></div>
         </div>
     </div>
     <div id="Box-input-button">
