Add id to button in header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <button>Sunrise</button>
-        <button>Moonrise</button>
+        <button id="Sunrise">Sunrise</button>
+        <button id="Moonrise">Moonrise</button>
     </header>
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
     <div id="Magic-8-ball">
