Set btn to disabled

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="Box-input-button">
         <input id="Input-style" type="text" placeholder="Ask Me Anything!">
-        <button id="Enter">Enter</button>
+        <button id="Enter" disabled="disabled">Enter</button>
     </div>
     <script src="Script.js" charset="utf-8"></script>
 </body>
