--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Magic 8 Ball</title>
 </head>
 <body>
+    <header>
+    </header>
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
     <div id="Magic-8-ball">
         <div id="Magic-8-ball-border">
