Style Magic-8-Ball-number  To a bigger size

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>What would you like to ask the Magic 8 ball just click below to get your answer.</h1>
     <div id="Magic-8-ball">
         <div id="Magic-8-ball-border">
-            <div id="Answer">8</div>
+            <div id="Answer"><h1 id="Magic-8-Ball-number" style="font-size: 10vh;">8</h1></div>
         </div>
     </div>
     <div id="Box-input-button">
